Приведение структуры проекта в порядок и доработка интерфейса

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Кредитный скоринг</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <main class="page">
@@ -110,7 +110,7 @@
         <span>Model: model.joblib</span>
     </footer>
 
-    <script src="/static/app.js"></script>
+    <script src="/static/js/app.js"></script>
     </main>
 </body>
 </html>
