--- a/templates/model.html
+++ b/templates/model.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>О модели</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <main class="page">
@@ -108,22 +108,22 @@
         <div class="charts">
         <div class="chart">
             <h3>ROC-кривая — Decision Tree</h3>
-            <img src="/assets/{{ images.roc_dt }}" alt="ROC DecisionTree">
+            <img src="/static/images/{{ images.roc_rf }}">
         </div>
 
         <div class="chart">
             <h3>ROC-кривая — Random Forest</h3>
-            <img src="/assets/{{ images.roc_rf }}" alt="ROC RandomForest">
+            <img src="/static/images/{{ images.roc_rf }}">
         </div>
 
         <div class="chart">
             <h3>Матрица ошибок — Decision Tree</h3>
-            <img src="/assets/{{ images.cm_dt }}" alt="CM DecisionTree">
+            <img src="/static/images/{{ images.roc_rf }}">
         </div>
 
         <div class="chart">
             <h3>Матрица ошибок — Random Forest</h3>
-            <img src="/assets/{{ images.cm_rf }}" alt="CM RandomForest">
+            <img src="/static/images/{{ images.roc_rf }}">
         </div>
         </div>
     </section>
