--- a/templates/model.html
+++ b/templates/model.html
@@ -108,22 +108,22 @@
         <div class="charts">
         <div class="chart">
             <h3>ROC-кривая — Decision Tree</h3>
-            <img src="/static/images/{{ images.roc_rf }}">
+            <img src="/static/images/{{ images.roc_dt }}" alt="ROC Decision Tree">
         </div>
 
         <div class="chart">
             <h3>ROC-кривая — Random Forest</h3>
-            <img src="/static/images/{{ images.roc_rf }}">
+            <img src="/static/images/{{ images.roc_rf }}" alt="ROC Random Forest">
         </div>
 
         <div class="chart">
             <h3>Матрица ошибок — Decision Tree</h3>
-            <img src="/static/images/{{ images.roc_rf }}">
+            <img src="/static/images/{{ images.cm_dt }}" alt="Confusion Matrix Decision Tree">
         </div>
 
         <div class="chart">
             <h3>Матрица ошибок — Random Forest</h3>
-            <img src="/static/images/{{ images.roc_rf }}">
+            <img src="/static/images/{{ images.cm_rf }}" alt="Confusion Matrix Random Forest">
         </div>
         </div>
     </section>
